...
        android:focusableInTouchMode="false"
        android:onClick="onPVPButtonClick"
        android:text="Player vs Player"
        android:textSize="25sp" />

    <Button
        android:id="@+id/home_screen_freeplay_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/home_screen_pvp_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
...
