...

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Computer"
        android:id="@+id/freeplay_p1Color_textView"
        android:textSize="35sp"
        android:paddingBottom="10dp"
        android:contentDescription="Color of pieces to play as"
        android:focusable="true"
        android:textColor="#ffffff"
...
