...
                android:onClick="onButtonClick" />
        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/chesspieces_relative"
        android:layout_marginTop="23dp"
        android:layout_toEndOf="@+id/chesspieces_relative"
...
